--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "pg": "^8.8.0",
         "socket.io": "^4.5.2"
     },
+    "type": "module",
     "scripts": {
         "start": "npm install",
         "pretty": "prettier --write .",
