--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "dependencies": {
         "eslint-config-airbnb": "^19.0.4",
         "eslint-plugin-react": "^7.30.0",
+        "express": "^4.18.2",
         "pg": "^8.8.0",
         "socket.io": "^4.5.2"
     },
