--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
     "dependencies": {
+        "body-parser": "^1.20.1",
         "eslint-config-airbnb": "^19.0.4",
         "eslint-plugin-react": "^7.30.0",
         "express": "^4.18.2",
+        "express-session": "^1.17.3",
+        "passport": "^0.6.0",
+        "passport-local": "^1.0.0",
         "pg": "^8.8.0",
         "socket.io": "^4.5.2"
     },
