--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "dependencies": {
+        "bcrypt": "^5.1.0",
         "body-parser": "^1.20.1",
         "eslint-config-airbnb": "^19.0.4",
         "eslint-plugin-react": "^7.30.0",
